sample code 추가